
set(MAIN_FACTORY_SRC main_factory.cpp
             ../src/Factory.cpp
)

set(MAIN_ABSTRACT_FACTORY_DIRS main_abstract_factory.cpp ../src/AbstractFactory.cpp)

add_executable(main_factory ${MAIN_FACTORY_SRC})
add_executable(main_abstract_factory ${MAIN_ABSTRACT_FACTORY_DIRS})
add_executable(main_singleton main_singleton.cpp)
add_executable(main_builder main_builder.cpp)
add_executable(main_prototype main_prototype.cpp)
add_executable(main_bridge main_bridge.cpp)
add_executable(main_adapter main_adapter.cpp)
add_executable(main_decrator main_decrator.cpp)
add_executable(main_composite main_composite.cpp)
add_executable(main_flyweight main_flyweight.cpp)
add_executable(main_facade main_facade.cpp)
add_executable(main_proxy main_proxy.cpp)
add_executable(main_template main_template.cpp)
add_executable(main_strategy main_strategy.cpp)
add_executable(main_state main_state.cpp)
add_executable(main_observer main_observer.cpp)
add_executable(main_memento main_memento.cpp)
add_executable(main_mediator main_mediator.cpp)
add_executable(main_command main_command.cpp)
add_executable(main_visitor main_visitor.cpp)
add_executable(main_chain_of_responsibility main_chain_of_responsibility.cpp)
add_executable(main_iterator main_iterator.cpp)
add_executable(main_interpreter main_interpreter.cpp)